# zbus

./: 404.html  CLAUDE.md  Cargo.toml  blocking.html  client.html  concepts.html  connection.html  contributors.html  faq.html  index.html  introduction.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-1a8ad000.js  searchindex-75148e9a.js  searchindex-7e58e975.js  service.html  toc-a3902f6a.js  toc-a78ba3cc.js  toc.html
.github/workflows/: deploy.yml  rust.yml
book/src/: faq.md
zbus/: Cargo.toml
zbus/src/object_server/: mod.rs
zbus/src/object_server/interface/: dispatch_result.rs
zbus_macros/: Cargo.toml
zbus_macros/src/: iface.rs  proxy.rs
zbus_macros/tests/: tests.rs
zbus_names/: Cargo.toml
zbus_names/src/: bus_name.rs  interface_name.rs  unique_name.rs  well_known_name.rs
zbus_xml/: CHANGELOG.md  Cargo.toml
zbus_xml/tests/: tests.rs
zbus_xmlgen/: CHANGELOG.md  Cargo.toml
zbus_xmlgen/src/: lib.rs
zbus_xmlgen/tests/: compile.rs  gen.rs
zvariant/: CHANGELOG.md  Cargo.toml
zvariant/src/: fd.rs  object_path.rs
zvariant/tests/: dict_value.rs
zvariant_derive/: CHANGELOG.md  Cargo.toml
zvariant_utils/: Cargo.toml
zvariant_utils/src/: macros.rs
zvariant_utils/src/signature/: mod.rs
